<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PersonalFragment"
    android:background="@drawable/background_02">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/name"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/mobile_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/mobile"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/location_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/location"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/links_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/links"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/skills_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/skills"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/update_details_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_update_details"
                android:layout_margin="48dp"
                android:padding="16dp"
                android:layout_gravity="bottom|center"
                android:background="@drawable/my_button"/>
        </LinearLayout>

    </ScrollView>




</FrameLayout>