<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetails.UserHomeActivity"
    android:background="@drawable/background_02">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/florent_bg_top"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="10dp"
            app:diagonal_angle="6"
            app:diagonal_direction="left"
            app:diagonal_position="bottom">

            <ImageView
                android:id="@+id/bg_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/background_02" />

            <LinearLayout
                android:id="@+id/details_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/view2"
                    android:layout_width="80dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="32dp"

                    android:elevation="12dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/user_profile_pic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/student_01" />

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="13sp"
                        android:layout_margin="4dp"
                        android:textColor="#EEEEEE"/>

                    <TextView
                        android:id="@+id/email_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:layout_margin="4dp"
                        android:textSize="13sp"
                        android:textColor="#EEEEEE"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/organization_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/organization"
                            android:textSize="13sp"
                            android:layout_margin="4dp"
                            android:textColor="#EEEEEE"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" | "
                            android:textSize="13sp"
                            android:layout_margin="4dp"/>

                        <TextView
                            android:id="@+id/location_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textSize="13sp"
                            android:layout_margin="4dp"
                            android:textColor="#EEEEEE"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/florent_bg_top"
            android:layout_above="@id/florent_bg_bottom">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v4.view.ViewPager
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </LinearLayout>

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/florent_bg_bottom"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:elevation="10dp"
            app:diagonal_angle="6"
            app:diagonal_direction="right"
            app:diagonal_position="top"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/bg_image_view2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/background_02" />

        </com.github.florent37.diagonallayout.DiagonalLayout>

    </RelativeLayout>

</LinearLayout>